objects/School__c.object
<CustomObject>
    <label>School</label>
    <nameField>
        <label>School Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
                <value>
                    <fullName>Arunachal Pradesh</fullName>
                </value>
                <value>
                    <fullName>Assam</fullName>
                </value>
                <value>
                    <fullName>Bihar</fullName>
                </value>
                <value>
                    <fullName>Telangana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bhagalpur</fullName>
                </value>
                <value>
                    <fullName>Cachar</fullName>
                </value>
                <value>
                    <fullName>Changlang</fullName>
                </value>
                <value>
                    <fullName>Darbhanga</fullName>
                </value>
                <value>
                    <fullName>Dibrugarh</fullName>
                </value>
                <value>
                    <fullName>Gaya</fullName>
                </value>
                <value>
                    <fullName>Golaghat</fullName>
                </value>
                <value>
                    <fullName>Guntur</fullName>
                </value>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Itanagar Capital Complex</fullName>
                </value>
                <value>
                    <fullName>Jorhat</fullName>
                </value>
                <value>
                    <fullName>Kamrup Metropolitan</fullName>
                </value>
                <value>
                    <fullName>Karimnagar</fullName>
                </value>
                <value>
                    <fullName>Krishna</fullName>
                </value>
                <value>
                    <fullName>Kurnool</fullName>
                </value>
                <value>
                    <fullName>Lohit</fullName>
                </value>
                <value>
                    <fullName>Mahbubnagar</fullName>
                </value>
                <value>
                    <fullName>Muzaffarpur</fullName>
                </value>
                <value>
                    <fullName>Nizamabad</fullName>
                </value>
                <value>
                    <fullName>Patna</fullName>
                </value>
                <value>
                    <fullName>Tawang</fullName>
                </value>
                <value>
                    <fullName>Tirupati</fullName>
                </value>
                <value>
                    <fullName>Visakhapatnam</fullName>
                </value>
                <value>
                    <fullName>Warangal</fullName>
                </value>
                <value>
                    <fullName>West Kameng</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SchoolCode__c</fullName>
        <label>School Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_of_School__c</fullName>
        <formula>TEXT(FLOOR((TODAY() - EstablishedDate__c) / 365.2425)) &amp; &quot; Years &quot; &amp;
TEXT(FLOOR(MOD((TODAY() - EstablishedDate__c), 365.2425) / 30.44)) &amp; &quot; Months of Excellence&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age of School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactNumber__c</fullName>
        <label>Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EstablishedDate__c</fullName>
        <label>Established Date</label>
        <type>Date</type>
    </fields>
</CustomObject>